--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-morph": "^0.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
     "start": "react-scripts start",
